fixed extra space at bottom of library

--- a/style.css
+++ b/style.css
@@ -131,7 +131,8 @@ h1 {
 
     .drop-contents {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
     }
     
 }
